--- a/test03-11.16.html
+++ b/test03-11.16.html
@@ -15,6 +15,7 @@
     </a>
     <!-- Message for unsupported browsers -->
     <p>If you are on an iOS device, tap the image above to view the model in AR.</p>
+    <p>Note: This feature is only supported on iOS devices using Safari browser.</p>
 </body>
 
 </html>
